--- a/src/module.scss
+++ b/src/module.scss
@@ -1,15 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import './custom.scss';
 
-@import "~bootstrap/scss/bootstrap";
+:root {
+  --purple-cosmos-color : hsl(290, 34%, 10%);
+  --sweet-orange-color : hsl(26, 100%, 53%);
+}
 
 body {
   height: 100%;
-  background: hsl(290, 34%, 10%);
+  background: var(--purple-cosmos-color);
   overflow: hidden;
   font-family: 'Roboto Slab', serif;
 }
+
+
+.nav-links {
+  color: white;
+  }
+
+.nav-links:hover {
+color: var(--sweet-orange-color);
+}
+
+.nav-links:focus {
+  color: var(--sweet-orange-color);
+  font-weight: bold;
+}
+  
 
 .floating {  
   animation-name: floating;
@@ -39,25 +57,13 @@ body {
   
 }
 
-.nav-links {
-color: white; 
-
-}
-  
-.nav-links:hover {
-color: #ff7d14; /*will change color of text within the element on hover */
-}
-
 
 .title-empty {
       text-align: center;
       font-family: 'Space Grotesk', sans-serif;
       font-size: 5em;
       background: -webkit-linear-gradient(-86deg, #f12711 0%, #ff7d14 74%);
-      //background: #CA5E10;
-      //background: -webkit-linear-gradient(top left, #CA5E10, #E0A90F);
-      //background: -moz-linear-gradient(top left, #CA5E10, #E0A90F);
-      //background: linear-gradient(to bottom right, #CA5E10, #E0A90F);
+      background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-stroke: 0.06em transparent;
       color: hsl(290, 34%, 10%);
@@ -65,18 +71,6 @@ color: #ff7d14; /*will change color of text within the element on hover */
       padding-bottom: 0px;
       font-weight: 700;
 
-
-
-}
-
-.title-full {
-  text-align: center;
-  font-family: 'Space Grotesk', sans-serif;
-  font-size: 4em;
-  background: -webkit-linear-gradient(-86deg, #f94327 0%, #ff7d14 74%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 0px;
 }
 
 @function multiple-box-shadow ($n) {
@@ -96,7 +90,7 @@ $shadows-big:    multiple-box-shadow(200);
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
-  animation: animStar 100s linear infinite;
+  animation: animStar 50s linear infinite;
 
   &:after{
       content: " ";
@@ -157,3 +151,4 @@ $shadows-big:    multiple-box-shadow(200);
       65%  { transform: translate(0, 5px); }
       to   { transform: translate(0, -0px); }    
 }
+
