--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,4 @@
-$theme-colors: (
-  "primary": hsl(26, 100%, 53%),
-  "danger": #ff4136
+$theme-colors: ("primary": hsl(26, 100%, 53%),
 );
 
 @import '~bootstrap/scss/bootstrap.scss';
