--- a/src/module.scss
+++ b/src/module.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background: var(--purple-cosmos-color);
   overflow: hidden;
   font-family: 'Roboto Slab', serif;
@@ -27,7 +27,7 @@ body {
   font-weight: bold;
 }
 
-.main-text-row {
+#main-text-row {
   justify-content: center;
   text-align: center;
   font-family: 'Roboto Slab', sans-serif;
@@ -50,7 +50,7 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   margin-top: 5px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .card {
@@ -224,4 +224,7 @@ $shadows-big: multiple-box-shadow(200);
       margin: 0;
     }
   }
+
+  #main-text-row{font-size: 1.4em;}
+
 }
