--- a/src/module.scss
+++ b/src/module.scss
@@ -32,8 +32,10 @@ body {
   font-weight: bold;
 }
 
-#card-buy{width: 25rem;
-margin-bottom: 80px;}
+#card-buy {
+  width: 25rem;
+  margin-bottom: 80px;
+}
 
 #main-text-row {
   justify-content: center;
@@ -124,6 +126,10 @@ $shadows-big: multiple-box-shadow(200);
     background: transparent;
     box-shadow: $shadows-small;
   }
+}
+
+#card-sponsors {
+  margin-bottom: 40px;
 }
 
 #stars2 {
@@ -217,6 +223,7 @@ $shadows-big: multiple-box-shadow(200);
     .card {
       width: 16rem;
       height: auto;
+
     }
 
     .card-title {
@@ -233,8 +240,12 @@ $shadows-big: multiple-box-shadow(200);
     }
   }
 
-  #main-text-row{font-size: 1.4em;}
+  #main-text-row {
+    font-size: 1.4em;
+  }
 
-  #card-buy{width: 15rem;}
+  #card-buy {
+    width: 15rem;
+  }
 
 }
