--- a/src/module.scss
+++ b/src/module.scss
@@ -219,6 +219,7 @@ $shadows-big: multiple-box-shadow(200);
   /* portrait phones */
 
   #card-sponsors {
+    margin-bottom: 20px;
 
     .card {
       width: 16rem;
