added contact page 🤼

--- a/src/module.scss
+++ b/src/module.scss
@@ -37,6 +37,12 @@ body {
   margin-bottom: 80px;
 }
 
+.container {
+  width: 500px;
+}
+
+.form-group{color: white;}
+
 #main-text-row {
   justify-content: center;
   text-align: center;
