--- a/src/module.scss
+++ b/src/module.scss
@@ -61,6 +61,7 @@ body {
 }
 
 .floating {
+  width: auto;
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
