--- a/src/module.scss
+++ b/src/module.scss
@@ -32,20 +32,15 @@ body {
   font-weight: bold;
 }
 
-#card-buy {
-  width: 25rem;
-  margin-bottom: 80px;
-}
 
-#card-sponsors {
-  margin-bottom: 40px;
-}
 
 .container {
   width: 500px;
 }
 
-.form-group{color: white;}
+.form-group {
+  color: white;
+}
 
 #main-text-row {
   justify-content: center;
@@ -79,6 +74,19 @@ body {
   margin: 0 auto;
   float: none;
   margin-bottom: 10px;
+}
+
+#card-buy {
+  width: 25rem;
+  margin-bottom: 80px;
+}
+
+#card-sponsors {
+  margin-bottom: 40px;
+}
+
+#card-contact {
+  width: 30rem;
 }
 
 #nav {
@@ -155,6 +163,10 @@ $shadows-big: multiple-box-shadow(200);
     background: transparent;
     box-shadow: $shadows-medium;
   }
+}
+
+.mb-3 {
+  width: 500px;
 }
 
 #stars3 {
@@ -253,7 +265,10 @@ $shadows-big: multiple-box-shadow(200);
   }
 
   #card-buy {
-    width: 15rem;
+    width: 16rem;
   }
 
+  #card-contact {
+    width: 16rem;
+  }
 }
